--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Login & Signup</title>
 </head>
 
-<body style="display: flex; align-items: center; justify-content: center;">
+<body style="display: flex; align-items: center; justify-content: center; height: 100vh;">
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
         <h1>Login & Signup</h1>
 
